# keys_values

./: .gitignore  BENCHMARK_RUNS.md  BUILDING.md  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  FLASHINFER_INTEGRATION.md  MANIFEST.in  OPTIMIZATION_SUMMARY.md  README.md  SECURITY.md  benchmark_chunked_prefill.py  benchmark_forward_only.py  benchmark_long_context.py  black.sh  build_ext.py  claude_context.txt  flake.sh  launch_instance.md  license-add.sh  pyproject.toml  release.sh  requirements.md  setup.py  test_build.py  test_compare_weights.py  test_compile.py  test_flashinfer_ops_demo.py  test_flashinfer_vs_eager.py  test_h2o_debug.py  test_kernel_debug.py  test_wrapper_debug.py  todo_for_launch.md  validate_config.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  unit-tests.yml
ai_dev/: autotune_with_optuna.md  create_result_table.md  debug_cpu_gpu.md  debug_ring_attention_distributed_test.md  debug_ring_attention_test.md  debug_test_equalize.md  extract_eval_times_from_logs.md  extract_times_from_logs.md  extract_train_times_from_logs.md  extract_valid_loss_from_logs.md  tests_for_fused.md  trl_integration.md  vllm_integration.md
docs/: BENCHMARK_RUNS.md  develop_on_gpu.md  grpo_integration.md  launch_instance.md  vllm_integration.md
examples/: trl_grpo_demo.ipynb  vllm_lastrec_experiment.py  vllm_spike.py
githooks/: pre_commit
keys_values/: FLASHINFER_USAGE.md  TODO_FLASHINFER_OPTIMIZATIONS.md  __init__.py  __main__.py  adapter.py  adapter_v2.py  array_limit.py  attention.py  attention_utils.py  config.py  debug_utils.py  dora.py  dora_utils.py  flashinfer_ops.py  flashinfer_verification.py  flashinfer_wrapper.py  flex_attention.py  flex_attention_simple.py  fused_rmsnorm.py  fused_rope.py  fused_swiglu.py  gpu_memory.py  head_model.py  head_model_factory.py  logprobs.py  long_context.py  lora.py  lora_utils.py  model.py  parser_config.py  pos_encoding.py  sdpa_wrapper.py  sdpa_wrapper_old.py  size_log.py  triton_kernels.py  use_eager_kernel.py  utils.py
keys_values/attention/: __init__.py  attention_utils.py  base.py  flashinfer_ops.py  flashinfer_verification.py  flashinfer_wrapper.py  flex_attention.py  flex_attention_old.py  sdpa_op.py  sdpa_wrapper.py  use_eager_kernel.py  zero_padded_qlen_thresholds.csv
keys_values/autotune/: autotune_full.py  autotune_lora.py  optuna_study.py  test_optuna_study.py  visualize_study.py
keys_values/csrc/: BUILD.md  README.md  bindings.cpp
keys_values/data/: __init__.py  base.py  dataloader.py  evaluation.py  helmet.md  helmet.py  iterators.py  load_helmet_dev_eval.py  longbench_v2.py  module.py  sequence_classification.py  sft_dataset.py
keys_values/finetune/: args.py  (+11 more)
scripts/: benchmark_forward_only.py
test/: conftest.py  test_adapter.py  test_adapter_v2.py  test_array_limit.py  test_attention.py  test_attention_weights_properties.py  test_attn_weights.py  test_flashinfer_wrapper.py  test_flex_attention.py  test_logprobs.py  test_lora.py  test_model.py  test_sdpa_wrapper.py  test_triton_kernels.py  test_use_eager_kernel.py
(+151 files in other folders)
