[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "keys_values"
version = "0.1.dev1"
description = "Efficient Inference, Fine-tuning and Key-value Caching on top of LitGPT"
authors = [
    { name = "Matthias Seeger", email = "mseeger@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torchao",
    "filelock",
]

[project.urls]
homepage = "https://github.com/awslabs/keys_values"

[project.scripts]
keys_values = "keys_values.__main__:main"

[tool.setuptools.packages.find]
include = [
    "keys_values",
    "keys_values.*",
]
exclude = []

[tool.setuptools.package-data]
keys_values = [
    "LICENSE",
    "README.md",
]
