[project]
name = "keys-vals"
dynamic = ["version"]
description = "Efficient Inference, Fine-tuning and Key-Value Caching on top of LitGPT"
authors = [
    { name = "Matthias Seeger", email = "mseeger@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"

urls.homepage = "https://github.com/awslabs/keys_values"
scripts.keys_values = "keys_values.__main__:main"

dependencies = [
    "filelock",
    "black>=26.3.1",
    "flake8",
    "hypothesis",
]

[project.optional-dependencies]
cuda = ["flashinfer-python"]
trl = ["trl>=1.0.0"]

[tool.black]
# Pin the target versions so Black does not auto-detect the newest version it
# supports (e.g. py315). When the detected target is newer than the Python
# running Black (e.g. 3.13 on CI), Black's AST-equivalence safety check fails
# with "cannot parse code formatted for Python 3.x" and reports otherwise
# well-formatted files as needing reformatting. Keeping this in sync with
# `requires-python` keeps formatting deterministic across interpreters.
target-version = ["py38"]

[tool.setuptools.packages.find]
include = [
    "keys_values",
    "keys_values.*",
]
exclude = []

[tool.setuptools.dynamic]
version = {attr = "keys_values.read_version"}
